--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       
             <article class="card-info" >
               <img src="images/third.png" alt="cappuccino" class="info__img">
-              <h2 class="card__name">Create an account</h2>
+              <h2 class="card__name">Leave a feedback</h2>
               <p class="card__price">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam reiciendis nemo exercitationem a nobis accusamus doloremque, possimus minus numquam ab adipisci ea eius facilis vel consequatur distinctio sapiente dignissimos cumque.<span class="card__currency"></span>
               </p>
             </article>
