--- a/index_try.html
+++ b/index_try.html
@@ -22,7 +22,7 @@
 <body class="color_form">
 <main >
  <div class="container_m">
-  <h2 class="form_h2">Sign in</h2>
+  <h2 class="form_h2">Sign up</h2>
   <form id="registration-form">
    <label for="username">Name:</label>
    <input type="text" id="username" name="username" class="try" required>
@@ -33,10 +33,10 @@
    <label for="password">Password:</label>
    <input type="password" id="password" name="password" class="try" required>
 
-   <label for="confirm-password">Repete your password:</label>
+   <label for="confirm-password">Repeat your password:</label>
    <input type="password" id="confirm-password" name="confirm-password" class="try" required>
 
-   <button type="submit">Зарегистрироваться</button>
+   <button type="submit" class="sub">Sign up</button>
   </form>
  </div>
 </main>
@@ -49,7 +49,7 @@
         <a href=""><img src="images/inst.png" alt="instagram"></a>
         <a href="https://web.whatsapp.com/"><img src="images/whatsapp.png" alt="whatsapp"></a>
     </div>
-    <p>Web Developer: Aprosina Liza 2023</p>
+    <p>Web Developer: Aprosina Liza 2024</p>
 </footer>
  <script src="script_try.js"></script>
 </body>
